# shgemm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/shgemm/: shgemm.hpp
src/: dmem_accessor.hpp  shgemm.cu  shgemm_core.hpp  shgemm_pipeline_core.hpp  utils.hpp  wmmae_shgemm.hpp
test/: exponent_test.cu  power_consumption_test.cu  shgemm_k_slicing_test.cu  shgemm_test.cu
